# HelMoRo-software

./: .clang-format  .gitignore  LICENSE  README.md
helmoro_2dnav/: CMakeLists.txt  amcl_helmoro.launch  move_base.launch  move_base_explore.launch  package.xml
helmoro_2dnav/helmoro_maps/: gazebo_wohnung.yaml  joel_etage.yaml  joel_etage2.yaml  jonas_home_office.pgm  jonas_home_office.yaml  kreativlab.pgm  kreativlab.yaml  nicolas_wohnung.yaml  obsidian_floor9_1.pgm  obsidian_floor9_1.yaml  obsidian_floor9_2.pgm  obsidian_floor9_2.yaml  obsidian_floor9_auto.pgm  obsidian_floor9_auto.yaml  showcase_arena.pgm  showcase_arena.yaml  showcase_obsidian.pgm  showcase_obsidian.yaml  showcase_obsidian2.pgm  showcase_obsidian2.yaml  sif_table_gazebo.pgm  sif_table_gazebo.yaml
helmoro_2dnav/param/: DWA_local_planner_params.yaml  base_local_planner_params.yaml  common_costmap_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
helmoro_description/: CMakeLists.txt  package.xml
helmoro_description/include/helmoro_description/: helmoro_names.hpp
helmoro_description/include/helmoro_description/enums/: enums.hpp
helmoro_description/launch/: explore_helmoro.launch  gmapping.launch  gmapping_helmoro.launch  helmoro.launch  nav_helmoro.launch  rviz_helmoro.launch  showcase_helmoro.launch
helmoro_description/launch/explore_lite/: explore.launch  explore_costmap.launch
helmoro_description/meshes/: Chassis_ROS_V3.STL  Cover.STL  Orbbec Astra Camera No Mount 2.STL  Orbbec Astra Camera No Mount 3.STL  Orbbec Astra Camera No Mount.STL  Orbbec Astra Camera.STL  TheEye_Mini.STL  lidar_ROS.STL  lidar_ROS2.STL  lidar_ROS_V3.STL
helmoro_description/param/: default.yaml
helmoro_description/rviz/: rviz_config.rviz
helmoro_description/urdf/: helmoro.urdf  helmoro_parameters.urdf  helmoro_segments.urdf
helmoro_gazebo_plugin/: CMakeLists.txt  package.xml
helmoro_gazebo_plugin/include/helmoro_gazebo_plugin/: helmoro_gazebo_plugin.hpp
helmoro_gazebo_plugin/models/green_bin/: model.config  model.sdf
helmoro_gazebo_plugin/models/human_male_3/: model.config  model.sdf
helmoro_gazebo_plugin/models/human_male_3/meshes/: eyebrows.dae  skeleton_no_hair.dae  skin.dae
helmoro_gazebo_plugin/models/human_male_4/: model.config  model.sdf
helmoro_gazebo_plugin/models/human_male_4/meshes/: eye_eyebrow.dae  eyeball.dae  hair.dae  lenses.dae  pants.dae  pupil.dae  shirt.dae  shoes.dae
helmoro_gazebo_plugin/models/m545_ground_plane/: model.config  model.sdf
helmoro_gazebo_plugin/models/m545_sun/: model.config  model.sdf
helmoro_gazebo_plugin/models/m545_sun/Box_33x15/: model.config  model.sdf
helmoro_gazebo_plugin/models/mailbox_red/: model.config  model.sdf
helmoro_gazebo_plugin/models/plant_1_single/: model.config  model.sdf
helmoro_gazebo_plugin/models/plant_1_single/meshes/: leaf.dae
helmoro_gazebo_plugin/models/plant_2_single/: model.config  model.sdf
helmoro_gazebo_plugin/models/plant_2_single/meshes/: leaf2.dae
helmoro_gazebo_plugin/models/plant_3/: model.config  model.sdf
helmoro_gazebo_plugin/models/plant_3/meshes/: plant.dae
helmoro_gazebo_plugin/models/recycle_bin_red/: model.config  model.sdf
helmoro_gazebo_plugin/models/trash_bin/: model.config  model.sdf
helmoro_gazebo_plugin/param/: default.yaml
helmoro_gazebo_plugin/src/: helmoro_gazebo_plugin.cpp
helmoro_gazebo_plugin/worlds/: empty.world  helmoro_wohnung_mob  showcase_arena  simple.world
helmoro_joymanager/: CMakeLists.txt  package.xml
helmoro_joymanager/include/helmoro_joymanager/: HelmoroJoyManager.hpp
helmoro_joymanager/launch/: joymanager.launch
helmoro_joymanager/param/: parameters.yaml
helmoro_joymanager/src/: HelmoroJoyManager.cpp  helmoro_joymanager_node.cpp
helmoro_local_obstacle/: CMakeLists.txt  package.xml
helmoro_local_obstacle/include/helmoro_local_obstacle/: HelmoroLocalObstacle.hpp
helmoro_local_obstacle/src/: HelmoroLocalObstacle.cpp  helmoro_local_obstacle_node.cpp
helmoro_motor_commands/: CMakeLists.txt  package.xml
helmoro_motor_commands/include/helmoro_motor_commands/: helmoro_motor_commands.hpp
helmoro_motor_commands/launch/: motor_commands.launch
helmoro_motor_commands/param/: parameters.yaml
helmoro_motor_commands/src/: helmoro_motor_commands.cpp  helmoro_motor_commands_node.cpp
helmoro_motor_commands/src/motor_interface/: motor_interface.cpp
helmoro_motor_commands/src/serial_port/: serial_port.cpp
helmoro_msgs/: CMakeLists.txt  package.xml
helmoro_msgs/msg/: ActuatorPID.msg  HelmoroActuatorCommands.msg  HelmoroJointCommands.msg  HelmoroJointCommandsShort.msg  HelmoroJointCommandsShort2.msg  HelmoroWheelEncoderData.msg  ObjectDetections.msg  ObjectMap.msg  UsefulControllerInformations.msg  UsefulJointInformations.msg
helmoro_msgs/srv/: EditObjectMap.srv  GetPidGains.srv  RequestObjectFromMap.srv  SetPidGains.srv
helmoro_navigation_goals/: CMakeLists.txt  package.xml
helmoro_navigation_goals/include/helmoro_navigation_goals/: HelmoroNavigationGoals.hpp
helmoro_navigation_goals/launch/: navigation_goals.launch
helmoro_navigation_goals/param/: parameters.yaml
helmoro_navigation_goals/src/: HelmoroNavigationGoals.cpp  helmoro_navigation_goals_node.cpp
helmoro_state_publisher/: CMakeLists.txt  package.xml
helmoro_state_publisher/include/helmoro_state_publisher/: HelmoroStatePublisher.hpp
helmoro_state_publisher/src/: HelmoroStatePublisher.cpp  helmoro_state_publisher_node.cpp
object_detector/: CMakeLists.txt  package.xml
object_detector/include/object_detector/: object_detector.hpp
object_detector/launch/: object_detector.launch
object_detector/param/: parameters.yaml
object_detector/src/: object_detector.cpp  object_detector_node.cpp
object_map/: CMakeLists.txt  costmap_plugins.xml  package.xml
object_map/include/object_map/: object_map.hpp  object_map_layer.hpp
object_map/launch/: object_map.launch
object_map/param/: parameters.yaml
object_map/src/: object_map.cpp  object_map_layer.cpp  object_map_node.cpp
(+11 files in other folders)
