<?xml version="1.0"?>
<package format="2">
 
  <name>helmoro_gazebo_plugin</name>
  <version>0.0.0</version>
  <description>helmoro plugin for gazebo</description>
  <maintainer email="luca.forni@helbling.ch">Luca Forni</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>helmoro_description</depend>
  <depend>helmoro_msgs</depend>
  <depend>gazebo_msgs</depend>
  <build_export_depend>boost</build_export_depend>
  <build_export_depend>gazebo</build_export_depend>

  <export>
    <gazebo_ros                                                                 
      gazebo_plugin_path="${prefix}/lib"
      gazebo_model_path="${prefix}/../.." /> 
  </export>

</package>
