<?xml version="1.0"?>
<package format="2">
  <name>helmoro_local_obstacle</name>
  <version>0.0.0</version>
  <description>The Helmoro local obstacle detection package</description>
  
  <maintainer email="joel.habersatter@helbling.ch">Joël Habersatter</maintainer>
  <author email="joel.habersatter@helbling.ch">Joël Habersatter</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>helmoro_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>any_node</depend>
  <depend>helmoro_description</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>  

</package>
