<?xml version="1.0"?>
<package format="2">
  
  <name>helmoro_msgs</name>
  <version>0.0.0</version>
  <description>The helmoro_msgs package</description>
  <maintainer email="luca.forni@helbling.ch">Luca Forni</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
