<?xml version="1.0"?>
<package format="2">
  <name>helmoro_navigation_goals</name>
  <version>0.0.0</version>
  <description>The helmoro_navigation_goals package</description>

  <maintainer email="joel.habersatter@helbling.ch">Luca Forni</maintainer>
  <author email="joel.habersatter@helbling.ch">Luca Forni</author>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>helmoro_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>any_node</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>helmoro_description</depend>

</package>
