<?xml version="1.0"?>
<package format="2">
  <name>object_detector</name>
  <version>0.0.0</version>
  <description>The object_detector package</description>

  <maintainer email="dario.brescianini@helbling.ch">brd</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>helmoro_msgs</depend>
  <depend>image_transport</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>any_node</depend>

  <export>

  </export>
</package>
