<?xml version="1.0"?>
<package format="2">
  <name>object_map</name>
  <version>0.0.0</version>
  <description>The object_map package</description>

  <maintainer email="dario.brescianini@helbling.ch">brd</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>

  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>helmoro_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv2</depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
  </export>
</package>
